--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -24,7 +24,7 @@
                     <main>
                         <div class="row mb-5 pb-4">
                             <div class="col-12">
-                                <img src="img/video-detail-1.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
+                                <img src="   <%= photo.image %>" alt="Image" class="img-fluid tm-catalog-item-img">
                             </div>
                         </div>
                         <div class="row mb-5 pb-5">
@@ -35,7 +35,7 @@
                                         <%= photo.title %>
                                     </h2>
                                     <p class="mb-4">
-                                        <%= photo.title %>
+                                        <%= photo.description %>
                                     </p>
                                 </div>
                             </div>
