--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -49,8 +49,10 @@
                                         </a>
                                     </div>
                                     <div class="text-center">
-                                        <a href="<%= photo._id %>"
-                                            class="btn btn-danger p-0 tm-btn-animate tm-btn-download tm-icon-download">
+                                        <a href="/photos/<%= photo._id %>?_method=DELETE"
+                                            class="btn btn-danger p-0 tm-btn-animate tm-btn-download tm-icon-download"
+                                            onclick="return confirm('Are You Sure?')">
+
                                             <span>Delete Photo</span>
                                         </a>
                                     </div>
