--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -48,7 +48,7 @@ https://templatemo.com/tm-552-video-catalog
                                                 class="form-control rounded-0" placeholder="Photo Title">
                                         </div>
                                         <div class="form-group">
-                                            <textarea rows="8" name="description" class="form-control rounded-0"
+                                            <textarea rows="8" name="detail" class="form-control rounded-0"
                                                 placeholder="Photo Description"><%= photo.description %></textarea>
                                         </div>
                                         <div class="form-group mb-0">
